--- a/final.Rmd
+++ b/final.Rmd
@@ -336,6 +336,7 @@ Logistic regression model formula: $low \sim smoke + age + high\_bp + birth$
 # Build the logistic regression model
 model <- glm(low ~ smoke + age + high_bp + birth, data = birthweight_analysis, 
              family = binomial)
+
 summary(model)
 
 # Calculate odds ratios and 95% confidence intervals
@@ -344,15 +345,19 @@ exp(cbind(Odds_Ratio = coef(model), confint(model)))
 
 #### Interpretation of Odds Ratios and 95% Confidence Intervals:
 
--   The **odds ratio for smoking during pregnancy is 2.35**, indicating that the odds of low birth weight are 2.35 times higher for children born to mothers who smoke during pregnancy compared to non-smokers, adjusting for maternal age, birth order and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (1.58, 3.5), suggesting a statistically significant association between smoking and low birth weight. This is supported by the p-value of 0.00002 (\< 0.05), indicating a significant effect of smoking on low birth weight at a 5% level of significance.
+-   The **odds ratio for smoking during pregnancy is 2.35**, indicating that the odds of low birth weight are 2.35 times higher for children born to mothers who smoke during pregnancy compared to non-smokers, adjusting for maternal age, birth order and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (1.58, 3.51), suggesting a statistically significant association between smoking and low birth weight. This is supported by the p-value of 0.00002 (\< 0.05), indicating a significant effect of smoking on low birth weight at a 5% level of significance.
 
--   The **odds ratio for middle-aged mothers (20-34 years) is 1.4**, suggesting that the odds of low birth weight are 1.4 times lower for middle-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking, birth order and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.72, 2.8) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.324 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
+-   The **odds ratio for middle-aged mothers (20-34 years) is 1.4**, suggesting that the odds of low birth weight are 1.4 times lower for middle-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking, birth order and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.72, 2.82) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.324 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
 
--   The **odds ratio for old-aged mothers (**$>=$ 35 years) is 1.8, suggesting that the odds of low birth weight are 1.8 times higher for old-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking, birth order and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.73, 4.54) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.203 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
+-   The **odds ratio for old-aged mothers ($>=$ 35 years) is 1.8**, suggesting that the odds of low birth weight are 1.8 times higher for old-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking, birth order and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.73, 4.54) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.203 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
 
 -   The **odds ratio for high systolic blood pressure before pregnancy is 0.765**, suggesting that the odds of low birth weight are 0.765 times lower for mothers with high blood pressure compared to mothers without high blood pressure, adjusting for smoking, birth order and maternal age. The 95% confidence interval for the odds ratio is (0.47, 1.21) includes 1, indicating that the effect of high blood pressure on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.264 ( \> 0.05) which indicates that the effect of high blood pressure is not statistically significant at 5 % level of significance.
 
--   The **odds ratio for low parity birth is 1.24**, suggesting that the odds of low birth weight are 1.06 times higher for mothers with high blood pressure compared to mothers without high blood pressure, adjusting for smoking, birth order and maternal age. The 95% confidence interval for the odds ratio is (0.47, 1.22) includes 1, indicating that the effect of high blood pressure on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.812 ( \> 0.05) which indicates that the effect of high blood pressure is not statistically significant at 5 % level of significance.
+-   The **odds ratio for low parity birth is 1.06**, suggesting that the odds of low birth weight are 1.06 times higher for children with birth order of second or third compared to first-order births, adjusting for smoking, maternal age and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.67, 1.66) includes 1, indicating that the effect of birth order on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.812 ( \> 0.05) which indicates that the effect of birth order is not statistically significant at 5 % level of significance.
+
+-   The **odds ratio for high parity birth is 1.05**, suggesting that the odds of low birth weight are 1.05 times higher for children with birth order of four or more compared to first-order births, adjusting for smoking, maternal age and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.27, 3.66) includes 1, indicating that the effect of birth order on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.941 ( \> 0.05) which indicates that the effect of birth order is not statistically significant at 5 % level of significance.
+
+Although, the odds ratio results for low parity and high parity are in contradiction with the literature, which suggests that first-order births are associated with a higher incidence of low birth weight compared to higher-order births. This discrepancy may be due to the small sample size or other unmeasured confounders that were not accounted for in the model. 
 
 ------------------------------------------------------------------------
 
@@ -376,7 +381,7 @@ exp(cbind(Odds_Ratio = coef(model1), confint(model1)))
 
 -   The **odds ratio for middle-aged mothers (20-34 years) is 1.44**, suggesting that the odds of low birth weight are 1.44 times lower for middle-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.78, 2.8) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.261 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
 
--   The **odds ratio for old-aged mothers (**$>=$ 35 years) is 1.89, suggesting that the odds of low birth weight are 1.89 times higher for old-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.85, 4.32) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.124 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
+-   The **odds ratio for old-aged mothers ($>=$ 35 years) is 1.89**, suggesting that the odds of low birth weight are 1.89 times higher for old-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.85, 4.32) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.124 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
 
 -   The **odds ratio for high systolic blood pressure before pregnancy is 0.765**, suggesting that the odds of low birth weight are 0.765 times lower for mothers with high blood pressure compared to mothers without high blood pressure, adjusting for smoking and maternal age. The 95% confidence interval for the odds ratio is (0.47, 1.21) includes 1, indicating that the effect of high blood pressure on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.262 ( \> 0.05) which indicates that the effect of high blood pressure is not statistically significant at 5 % level of significance.
 
@@ -401,7 +406,7 @@ exp(cbind(Odds_Ratio = coef(model2), confint(model2)))
 
 -   The **odds ratio for middle-aged mothers (20-34 years) is 1.44**, suggesting that the odds of low birth weight are 1.44 times lower for middle-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking. The 95% confidence interval for the odds ratio is (0.78, 2.8) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.258 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
 
--   The **odds ratio for old-aged mothers (**$>=$ 35 years) is 1.98, suggesting that the odds of low birth weight are 1.98 times higher for old-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking. The 95% confidence interval for the odds ratio is (0.89, 4.5) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.097 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
+-   The **odds ratio for old-aged mothers ($>=$ 35 years) is 1.98**, suggesting that the odds of low birth weight are 1.98 times higher for old-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking. The 95% confidence interval for the odds ratio is (0.89, 4.5) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.097 ( \> 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
 
 ------------------------------------------------------------------------
 
@@ -447,8 +452,10 @@ exp(cbind(Odds_Ratio = coef(model4), confint(model4)))
 
 The logistic regression analysis was conducted to address the research question: *Does smoking during pregnancy have a causal effect on the risk of the child being born with low birth weight (below 2500 grams)?*
 
-The results from all four models consistently show that smoking during pregnancy significantly increases the risk of low birth weight in children. After adjusting for confounders like maternal age and pre-pregnancy systolic blood pressure, the odds of low birth weight were found to be approximately 2.3 as high for children born to mothers who smoked during pregnancy. These findings underscore the importance of smoking cessation interventions during pregnancy to reduce the risk of adverse birth outcomes.
+The results from all the above models consistently show that smoking during pregnancy significantly increases the risk of low birth weight in children. After adjusting for confounders like maternal age, birth order of the child and pre-pregnancy systolic blood pressure, the **odds of low birth weight were found to be approximately 2.3 as high for children born to mothers who smoked during pregnancy**. These findings underscore the importance of smoking cessation interventions during pregnancy to reduce the risk of adverse birth outcomes.
 
 The inclusion of covariates in the model helps to estimate the total causal effect of smoking on low birth weight while accounting for potential confounding factors. The results provide valuable insights for public health initiatives aimed at improving maternal and child health outcomes.
+
+Hence, we conclude that **smoking during pregnancy has a significant causal effect on the risk of low birth weight in children.**
 
 # References
